[package]
name = "rust-wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = {version = "1.14.0", features = [ "derive"]}
cgmath = "0.18.0"
env_logger = "0.10.1"
log = "0.4.20"
pollster = "0.3.0"
tobj = {version = "4.0.0", features = ["async"]}
wgpu = "0.18.0"
winit = { version = "0.29.4", features = ["rwh_05"]}

[build-dependencies]
anyhow = "1.0.75"
fs_extra = "1.3.0"
glob = "0.3.1"
